--- a/press.html
+++ b/press.html
@@ -22,7 +22,7 @@
        <a class="logo-large" id="nav2" class="first"><a class="logo-large" href="index.html"><img src="./images/method_m_gold.png" alt="Logo" width="100%"/></a>
       <a class="site" href"#">&#9776; MENU</a>
 <ul id="nav1" class="navigation">
-      <li class="logo-small" id="nav2" class="first"><a href="index.html"><img src="./images/small_logo.png" alt="Logo" height="43px" class="logo-small"/></a></li>
+      <li class="logo-small" id="nav2" class="first"><a href="index.html"><img src="./images/method_m_gold.png" alt="Logo" height="43px" class="logo-small"/></a></li>
        <li><a href="index.html" title="Home">Home</a></li>
        <li><a href="films.html" title="Films">Films</a></li>
        <li><a href="filmmakers.html" title="Filmmakers">Filmmakers</a></li>
@@ -81,7 +81,7 @@
 </div>
 </div> <!--Closing body container-->
 <ul id="footer">
-      <li style="float:left"><a href="mailto:woelfels@missouri.edu" title="Contact">Contact</a></li>
+      <li><a href="mailto:woelfels@missouri.edu"><img src="./images/mail_icon.png" width= "35px"></a></li>
       <li><a href="https://vimeo.com/home" target="_blank"><img src="./images/vimeo_icon.png" alt="Vimeo" width="35px"/></a></li>
       <li><a href="https://www.facebook.com/" target="_blank"><img src="./images/facebook_icon.png" alt="Facebook" width="35px"/></a></li>
       <li><a href="https://twitter.com/" target="_blank"><img src="./images/twitter_icon.png" alt="Twitter" width="35px"/></a></li>
