--- a/filmmakers.html
+++ b/filmmakers.html
@@ -45,7 +45,7 @@ Method M Films is powered by up and coming filmmakers from the University of Mis
 
 <div class="all">
 
-<div class="directors">
+<div class="directors" align-items="center">
 
   <div class="slide">
     <div>
@@ -53,13 +53,9 @@ Method M Films is powered by up and coming filmmakers from the University of Mis
         <a href="John_Doe_Director.html" title="Varun Bajaj"> Varun Bajaj </a>
         </h3>
       <p >
-        <a href="Concerned_Student_1950.html"><img src= "./images/Bajaj.png" alt= "Varun Bajaj" width="150px"  height="310px" />
+        <a href="Concerned_Student_1950.html"><img src= "./images/Bajaj.png" alt= "Varun Bajaj" width="150px"  height="310px" /></a>
 
       </p>
-        <p>
-          <a href="Concerned_Student_1950.html"> <title="Concerned Student 1950"> Co-director of
-            <br /> Concerned Student 1950 </a>
-        </p>
   </div>
   </div>
 
@@ -71,12 +67,8 @@ Method M Films is powered by up and coming filmmakers from the University of Mis
     </h3>
 
     <p id= "name">
-    <a href="John_Doe_Director.html"><img src= "./images/Dietrich.png" alt= "Adam Dietrich" width="150px"  height="310px" />
+    <a href="John_Doe_Director.html"><img src= "./images/Dietrich.png" alt= "Adam Dietrich" width="150px"  height="310px" /></a>
 
-    </p>
-    <p id= "">
-      <a href="Concerned_Student_1950.html"><title="Concerned Student 1950"> Co-director of
-        <br />Concerned Student 1950 </a>
     </p>
     </div>
   </div>
@@ -89,15 +81,37 @@ Method M Films is powered by up and coming filmmakers from the University of Mis
             <a href="John_Doe_Director.html">Kellan Marvin</a>
             </h3>
             <p >
-          <a href="John_Doe_Director.html"><img src= "./images/marvin.png" alt= "Kellan Marvin" width="150px" height="310px" />
+          <a href="John_Doe_Director.html"><img src= "./images/marvin.png" alt= "Kellan Marvin" width="150px" height="310px" /></a>
 
           </p>
-              <p id= "">
-                <a href="Concerned_Student_1950.html"><title="Concerned Student 1950"> Co-director of
-                  <br />Concerned Student 1950 </a>
+      </div>
+      </div>
+
+
+      <div class="slide">
+        <div>
+            <h3 >
+              <a href="John_Doe_Director.html">Kellan Marvin</a>
+              </h3>
+              <p >
+            <a href="John_Doe_Director.html"><img src= "./images/marvin.png" alt= "Kellan Marvin" width="150px" height="310px" /></a>
+
+            </p>
+        </div>
+        </div>
+
+
+        <div class="slide">
+          <div>
+              <h3 >
+                <a href="John_Doe_Director.html">Kellan Marvin</a>
+                </h3>
+                <p >
+              <a href="John_Doe_Director.html"><img src= "./images/marvin.png" alt= "Kellan Marvin" width="150px" height="310px" /></a>
+
               </p>
-      </div>
-      </div>
+          </div>
+          </div>
 </div>
 
 
