--- a/filmmakers.html
+++ b/filmmakers.html
@@ -112,6 +112,30 @@ Method M Films is powered by up and coming filmmakers from the University of Mis
               </p>
           </div>
           </div>
+
+          <div class="slide">
+            <div>
+                <h3 >
+                  <a href="John_Doe_Director.html">Kellan Marvin</a>
+                  </h3>
+                  <p >
+                <a href="John_Doe_Director.html"><img src= "./images/marvin.png" alt= "Kellan Marvin" width="150px" height="310px" /></a>
+
+                </p>
+            </div>
+            </div>
+
+            <div class="slide">
+              <div>
+                  <h3 >
+                    <a href="John_Doe_Director.html">Kellan Marvin</a>
+                    </h3>
+                    <p >
+                  <a href="John_Doe_Director.html"><img src= "./images/marvin.png" alt= "Kellan Marvin" width="150px" height="310px" /></a>
+
+                  </p>
+              </div>
+              </div>
 </div>
 
 
