--- a/Concerned_Student_1950.html
+++ b/Concerned_Student_1950.html
@@ -127,8 +127,71 @@ function showSlides(n) {
 <div id="credits"></a> <h2>Credits</h2>
 <p class="toplink">(<a href="#top">Back To Top</a>)</p>
 <h3>Filmmakers:</h3>
-<p>
-  <img src= "./images/filmmakers_photo.jpg" width="600px" alt= "Concerned Student filmmakers"/></p>
+
+<div class="directors" align-items="center">
+
+  <div class="slide">
+    <div>
+        <h3 >
+        <a href="John_Doe_Director.html" title="Varun Bajaj"> Varun Bajaj </a>
+        </h3>
+      <p >
+        <a href="Concerned_Student_1950.html"><img src= "./images/Bajaj.png" alt= "Varun Bajaj" width="150px"  height="310px" /></a>
+      </p>
+  </div>
+  </div>
+  <div class="slide">
+    <div>
+
+    <h3 >
+      <a href="John_Doe_Director.html">Adam Dietrich</a>
+    </h3>
+
+    <p id= "name">
+    <a href="John_Doe_Director.html"><img src= "./images/Dietrich.png" alt= "Adam Dietrich" width="150px"  height="310px" /></a>
+
+    </p>
+    </div>
+  </div>
+    <div class="slide">
+      <div>
+          <h3 >
+            <a href="John_Doe_Director.html">Kellan Marvin</a>
+            </h3>
+            <p >
+          <a href="John_Doe_Director.html"><img src= "./images/marvin.png" alt= "Kellan Marvin" width="150px" height="310px" /></a>
+
+          </p>
+      </div>
+      </div>
+
+
+      <div class="slide">
+        <div>
+            <h3 >
+              <a href="John_Doe_Director.html">Kellan Marvin</a>
+              </h3>
+              <p >
+            <a href="John_Doe_Director.html"><img src= "./images/marvin.png" alt= "Kellan Marvin" width="150px" height="310px" /></a>
+
+            </p>
+        </div>
+        </div>
+
+
+        <div class="slide">
+          <div>
+              <h3 >
+                <a href="John_Doe_Director.html">Kellan Marvin</a>
+                </h3>
+                <p >
+              <a href="John_Doe_Director.html"><img src= "./images/marvin.png" alt= "Kellan Marvin" width="150px" height="310px" /></a>
+
+              </p>
+          </div>
+          </div>
+</div>
+
 <h3>Directors:</h3>
   <p style= "text-align: center">Adam Dietrich and Varun Bajaj</p>
 <h3>Producers:</h3>
