Added more placeholder filmmakers

--- a/filmmakers.html
+++ b/filmmakers.html
@@ -91,10 +91,10 @@ Method M Films is powered by up and coming filmmakers from the University of Mis
       <div class="slide">
         <div>
             <h3 >
-              <a href="John_Doe_Director.html">Kellan Marvin</a>
+              <a href="John_Doe_Director.html">Michael Bay</a>
               </h3>
               <p >
-            <a href="John_Doe_Director.html"><img src= "./images/marvin.png" alt= "Kellan Marvin" width="150px" height="310px" /></a>
+            <a href="John_Doe_Director.html"><img src= "./images/michael_bay.jpg" alt= "Michael Bay" width="150px" height="310px" /></a>
 
             </p>
         </div>
@@ -104,10 +104,10 @@ Method M Films is powered by up and coming filmmakers from the University of Mis
         <div class="slide">
           <div>
               <h3 >
-                <a href="John_Doe_Director.html">Kellan Marvin</a>
+                <a href="John_Doe_Director.html">Quentin Tarantino</a>
                 </h3>
                 <p >
-              <a href="John_Doe_Director.html"><img src= "./images/marvin.png" alt= "Kellan Marvin" width="150px" height="310px" /></a>
+              <a href="John_Doe_Director.html"><img src= "./images/quentin_tarantino.jpg" alt= "Quentin Tarantino" width="150px" height="310px" /></a>
 
               </p>
           </div>
@@ -116,10 +116,10 @@ Method M Films is powered by up and coming filmmakers from the University of Mis
           <div class="slide">
             <div>
                 <h3 >
-                  <a href="John_Doe_Director.html">Kellan Marvin</a>
+                  <a href="John_Doe_Director.html">Stanley Kubrick</a>
                   </h3>
                   <p >
-                <a href="John_Doe_Director.html"><img src= "./images/marvin.png" alt= "Kellan Marvin" width="150px" height="310px" /></a>
+                <a href="John_Doe_Director.html"><img src= "./images/stanley_kubrick.jpg" alt= "Stanley Kubrick" width="150px" height="310px" /></a>
 
                 </p>
             </div>
