--- a/Concerned_Student_1950.html
+++ b/Concerned_Student_1950.html
@@ -36,6 +36,7 @@
 
 
 <h1>Concerned Student 1950</h1>
+<div id="ConcernedLinks">
 <div class="videoWrapper">
     <iframe width="1280" height="720" src="https://player.vimeo.com/video/159844403" frameborder="0"></iframe>
   </div>
@@ -177,7 +178,7 @@ function showSlides(n) {
   <p style= "text-align: center">Robert Greene, Stacey Woelfel and the Jonathan B. Murray Center for Documentary Journalism</p>
 
 
-<div id="press"><div id="ConcernedLinks"></a> <h2>Press </h2>
+<div id="press"></a> <h2>Press </h2>
 <p class="toplink">(<a href="#top">Back To Top</a>)</p>
 <h3 style="text-align: center">Vox Magazine:</h3>
   <p style= "text-align: center">
