--- a/filmmakers.html
+++ b/filmmakers.html
@@ -128,10 +128,10 @@ Method M Films is powered by up and coming filmmakers from the University of Mis
             <div class="slide">
               <div>
                   <h3 >
-                    <a href="John_Doe_Director.html">Kellan Marvin</a>
+                    <a href="John_Doe_Director.html">Alfred Hitchcock</a>
                     </h3>
                     <p >
-                  <a href="John_Doe_Director.html"><img src= "./images/marvin.png" alt= "Kellan Marvin" width="150px" height="310px" /></a>
+                  <a href="John_Doe_Director.html"><img src= "./images/alfred_hitchcock.jpg" alt= "Alfred Hitchcock" width="150px" height="310px" /></a>
 
                   </p>
               </div>
