--- a/Concerned_Student_1950.html
+++ b/Concerned_Student_1950.html
@@ -169,25 +169,25 @@ function showSlides(n) {
 </div>
 
 <h3>Directors:</h3>
-  <p style= "text-align: center">Adam Dietrich and Varun Bajaj</p>
+  <p>Adam Dietrich and Varun Bajaj</p>
 <h3>Producers:</h3>
-  <p style= "text-align: center">Varun Bajaj, Adam Dietrich and Kellan Hayley Marvin</p>
+  <p>Varun Bajaj, Adam Dietrich and Kellan Hayley Marvin</p>
 <h3>Camera:</h3>
-  <p style= "text-align: center">Adam Dietrich, Varun Bajaj and Kellan Hayley Marvin</p>
+  <p>Adam Dietrich, Varun Bajaj and Kellan Hayley Marvin</p>
 <h3>Produced by:</h3>
-  <p style= "text-align: center">Robert Greene, Stacey Woelfel and the Jonathan B. Murray Center for Documentary Journalism</p>
+  <p>Robert Greene, Stacey Woelfel and the Jonathan B. Murray Center for Documentary Journalism</p>
 
 
 <div id="press"></a> <h2>Press </h2>
 <p class="toplink">(<a href="#top">Back To Top</a>)</p>
-<h3 style="text-align: center">Vox Magazine:</h3>
-  <p style= "text-align: center">
+<h3>Vox Magazine:</h3>
+  <p>
     Public response to the film's True/False Film Festival screening by <a href= "http://www.voxmagazine.com/arts/movies/social-media-loved-concerned-student-film/article_d501fe4c-e3fe-11e5-8784-a769f84fe851.html"  target="_blank" title="Vox Magazine">Vox Magazine</a></p>
-<h3 style="text-align: center">Columbia Daily Tribune:</h3>
-  <p style= "text-align: center">
+<h3>Columbia Daily Tribune:</h3>
+  <p>
     Public response to the film's True/False Film Festival screening by the <a href= "http://www.columbiatribune.com/news/local/true-false-film-documents-experience-of-university-of-missouri-student/article_da17c1d5-70d7-58ce-b0f0-bfc41cd31b46.html" target="_blank" title="Columbia Tribune"> Columbia Tribune</a></p>
-<p><h3 style="text-align: center"><a href="press.html">Press Page </a></p>
-<h3 style="text-align: center">Press Kit <a href="./press_kits/Press_kit_example.pdf" target="_blank">PDF
+<p><h3><a href="press.html">Press Page </a></p>
+<h3> <a href="./press_kits/Press_kit_example.pdf" target="_blank">Press Kit PDF
 
 
 
