--- a/Concerned_Student_1950.html
+++ b/Concerned_Student_1950.html
@@ -83,9 +83,10 @@
     <img src="images/concerned_still4.jpg" style="width:80%">
     <div class="numbertext">4 / 4</div>
   </div>
-
+<div class="photoscroll">
   <a class="photo-prev" onclick="plusSlides(-1)">&#10094;</a>
   <a class="photo-next" onclick="plusSlides(1)">&#10095;</a>
+  </div>
 </div>
 <br>
 
