--- a/index.html
+++ b/index.html
@@ -127,25 +127,25 @@
 
 <div id="carousel">
     <div class="slide">
-        <a href="Concerned_Student_1950.html"><img src="images/Concerned_Student_poster.JPG" />
+        <a href="Concerned_Student_1950.html"><img src="images/Concerned_Student_poster.JPG" /></a>
       </div>
     <div class="slide">
-        <a href="Concerned_Student_1950.html"><img src="images/posters/dark-knight.jpg" />
+        <a href="Concerned_Student_1950.html"><img src="images/posters/dark-knight.jpg" /></a>
     </div>
     <div class="slide">
-        <a href="Concerned_Student_1950.html"><img src="images/posters/silence-of-the-lambs.jpg" />
+        <a href="Concerned_Student_1950.html"><img src="images/posters/silence-of-the-lambs.jpg" /></a>
     </div>
     <div class="slide">
-        <a href="Concerned_Student_1950.html"><img src="images/posters/fight-club.jpg" />
+        <a href="Concerned_Student_1950.html"><img src="images/posters/fight-club.jpg" /></a>
     </div>
     <div class="slide">
-        <a href="Concerned_Student_1950.html"><img src="images/posters/jaws.jpg" />
+        <a href="Concerned_Student_1950.html"><img src="images/posters/jaws.jpg" /></a>
     </div>
     <div class="slide">
-        <a href="Concerned_Student_1950.html"><img src="images/posters/force-awakens.jpeg" />
+        <a href="Concerned_Student_1950.html"><img src="images/posters/force-awakens.jpeg" /></a>
     </div>
     <div class="slide">
-        <a href="Concerned_Student_1950.html"><img src="images/posters/titanic.jpg" />
+        <a href="Concerned_Student_1950.html"><img src="images/posters/titanic.jpg" /></a>
     </div>
 </div>
 
