--- a/about.html
+++ b/about.html
@@ -45,10 +45,12 @@ Faculty
 <div class="card-container">
     <div class="card">
         <a href="mailto:woelfels@missouri.edu"><img src="./images/stacey.jpg" alt="Stacey Woelfel"/></a>
+          <p><h3>Stacey Woelfel</h3></p>
         <p>Director of the Jonathan B. Murray Center for Documentary Journalism at the school. He serves on the screening committee of the True/False Film Fest, is a jury member for the St. Louis International Film Festival and serves as a jury member and a member of the board of the Kansas City Film Festival.</p><p><a href="mailto:woelfels@missouri.edu">You can contact him at: woelfels@missouri.edu</a></p>
     </div>
     <div class="card">
         <a href="mailto:greenera@missouri.edu"><img src="./images/robert.jpg" alt="Robert Greene"/></a>
+          <p><h3>Robert Greene</h3></p>
         <p>Filmmaker-in-chief for the Jonathan B. Murray Center for Documentary Journalism. He was named one of the 10 Filmmakers to Watch in 2014 by The Independent. Robert’s most recent film is the critically-acclaimed Kate plays Christine.</p><p><a href="mailto:greenera@missouri.edu">You can contact him at: greenera@missouri.edu</a></p>
     </div>
   </div>
