center align of photos_fixed

--- a/Concerned_Student_1950.html
+++ b/Concerned_Student_1950.html
@@ -130,7 +130,7 @@ function showSlides(n) {
 <p class="toplink">(<a href="#top">Back To Top</a>)</p>
 <h3>Filmmakers:</h3>
 
-<div class="directors" align-items="center">
+<div class="directors">
 
   <div class="slide">
     <div>
