--- a/John_Doe_Director.html
+++ b/John_Doe_Director.html
@@ -50,7 +50,7 @@ Method M Filmmakers
 
 
 <p id = "about">
-        <p><a id="connect" href="Concerned_Student_1950.html" title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a> </p><p>Bajaj is a person who makes films and stuff. He has brown hair and eyes and a face.
+        <p><a id="connect" href="Concerned_Student_1950.html" style="color:black" title="Concerned Student 1950"> Co-director of Concerned Student 1950 </a> </p><p>Bajaj is a person who makes films and stuff. He has brown hair and eyes and a face.
         Lorem ipsum dolor sit amet, nusquam sententiae eam an, laudem corpora his ad. Ut wisi facilisis usu, graece causae timeam vel ex, ut ius dicant minimum constituto.</p><p>Pro prima dicunt pericula ex, ex duo facete reformidans, at doming prompta vis. Quot everti expetendis te sea, his no erant maluisset efficiendi. Mel quas integre et. Id quem reprehendunt mel, mei et sumo agam eros. Ad nihil homero alienum ius, mucius postulant eu eum.
 </p>
 
