--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
       <a class="site" href"#">&#9776; MENU</a>
 <ul id="nav1" class="navigation">
       <li class="logo-small" id="nav2" class="first"><a href="index.html"><img src="./images/method_m_gold.png" alt="Logo" height="43px" class="logo-small"/></a></li>
-       <li><a href="index.html" title="Home">Home</a></li>
+       <li><a href="index.html" class="icon-small" title="Home">Home</a></li>
        <li><a href="films.html" title="Films">Films</a></li>
        <li><a href="filmmakers.html" title="Filmmakers">Filmmakers</a></li>
        <li><a href="about.html" title="About">About</a></li>
        <li><a href="press.html" title="Press">Press</a></li>
-       <li><a href="search.html"><img src="./images/magnifying_glass.png" alt="Icon" height="43px" class="logo-small"/></a></li>
+       <li><a href="search.html" ><img src="./images/magnifying_glass.png" alt="Icon" height="43px"/></a></li>
 </ul>
 </nav>
 <div id="bodycontainer">
