Updated navs, alignment

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 <body>
   <div id="container">
     <nav>
-       <a class="logo-large" id="nav2" class="first"><a class="logo-large" href="index.html"><img src="./images/method_m_gold.png" alt="Logo" width="100%"/></a>
+      <a class="logo-large" id="nav2" class="first" class="logo-large" href="index.html"><img src="./images/method_m_gold.png" alt="Logo" width="100%"/></a>
       <a class="site" href"#">&#9776; MENU</a>
 <ul id="nav1" class="navigation">
-      <li class="logo-small" id="nav2" class="first"><a href="index.html"><img src="./images/method_m_gold.png" alt="Logo" height="43px" class="logo-small"/></a></li>
-       <li><a href="index.html" class="icon-small" title="Home">Home</a></li>
+      <li id="nav2" class="first"><a href="index.html"><img src="./images/method_m_gold.png" alt="Logo" height="43px" class="logo-small"/></a></li>
+       <li><a href="index.html" title="Home">Home</a></li>
        <li><a href="films.html" title="Films">Films</a></li>
        <li><a href="filmmakers.html" title="Filmmakers">Filmmakers</a></li>
        <li><a href="about.html" title="About">About</a></li>
        <li><a href="press.html" title="Press">Press</a></li>
-       <li><a href="search.html" ><img src="./images/magnifying_glass.png" alt="Icon" height="43px"/></a></li>
+       <li><a href="search.html"><img src="./images/magnifying_glass.png" alt="Icon" height="43px"/></a></li>
 </ul>
 </nav>
 <div id="bodycontainer">
